removed bash script and merge it to python script

--- a/datasampling/makefile
+++ b/datasampling/makefile
@@ -1,7 +1,7 @@
 
-sample: build.sh
-	./build.sh 10 raw_data/expert ../data/expert
-	./build.sh 10 raw_data/inexpert ../data/inexpert
+sample:
+	python datasampling.py 10 raw_data/expert ../data/expert
+	python datasampling.py 10 raw_data/inexpert ../data/inexpert
 
 clean:
 	rm -rf ../data/expert/*
