updated datalayer for cross validation

--- a/datasampling/makefile
+++ b/datasampling/makefile
@@ -1,7 +1,8 @@
+DATA_PATH="./raw_data/exp-vs-inexp-filtered"
 
 sample:
-	python datasampling.py 10 raw_data/expert ../data/expert
-	python datasampling.py 10 raw_data/inexpert ../data/inexpert
+	python datasampling.py 10 $(DATA_PATH)/expert ../data/expert
+	python datasampling.py 10 $(DATA_PATH)/inexpert ../data/inexpert
 
 clean:
 	rm -rf ../data/expert/*
