--- a/src/makefile
+++ b/src/makefile
@@ -1,10 +1,10 @@
 
 run:
-	python3 lstm_classification.py
+	python3 lstm_classification.py 16 ./logs/test
 
 run_tensorboard:
 	tensorboard --logdir=logs/100_rows/128_hidden/group1
 
 clean:
-	rm -rf logs __pycache__ util/__pycache__
+	rm -rf logs reports/* __pycache__ util/__pycache__
 
