updated code with newest tensorflow

--- a/src/makefile
+++ b/src/makefile
@@ -3,8 +3,8 @@ run:
 	python3 lstm_classification.py 16 ./logs/test
 
 run_tensorboard:
-	tensorboard --logdir=logs/100_rows/128_hidden/group1
+	tensorboard --logdir=logs/test/groupid0
 
 clean:
-	rm -rf logs reports/* __pycache__ util/__pycache__
+	rm -rf logs __pycache__ util/__pycache__
 
