--- a/src/makefile
+++ b/src/makefile
@@ -1,6 +1,6 @@
 
 run:
-	python3 lstm_classification.py 16 ./logs/test
+	python3 lstm_classification.py ../data/last -n 16 -l ./logs/test
 
 run_tensorboard:
 	tensorboard --logdir=logs/test/groupid0
