--- a/requirements.txt
+++ b/requirements.txt
@@ -1,86 +1,10 @@
-ansible==2.2.1.0
-appdirs==1.4.0
-brewer2mpl==1.4.1
-cairocffi==0.7.2
-cffi==1.9.1
-chardet==2.3.0
-command-not-found==0.3
-coverage==4.2
-cryptography==1.7.2
-cycler==0.10.0
-decorator==4.0.10
-entrypoints==0.2.2
-fail2ban==0.9.3
-ggplot==0.11.5
-h5py==2.6.0
-httplib2==0.9.2
-idna==2.2
-ipykernel==4.5.0
-ipython==5.0.0
-ipython-genutils==0.1.0
-ipywidgets==5.2.2
-Jinja2==2.8.1
-joblib==0.10.0
-jsonschema==2.5.1
-jupyter-client==4.4.0
-jupyter-core==4.2.0
-language-selector==0.1
-lockfile==0.12.2
-Mako==1.0.4
-MarkupSafe==0.23
-matplotlib==1.5.1
-mistune==0.7.3
-mpmath==0.19
-nbconvert==4.2.0
-nbformat==4.1.0
-netaddr==0.7.19
-nose==1.3.7
-notebook==4.2.2
-numpy==1.11.1
-oauth2==1.9.0.post1
+appdirs==1.4.2
+numpy==1.12.0
 packaging==16.8
-pam==0.1.4
-pandas==0.18.1
-paramiko==2.1.1
-patsy==0.4.1
-pexpect==4.2.0
-pickleshare==0.7.3
-ply==3.8
-prompt-toolkit==1.0.3
-ptyprocess==0.5.1
-pyasn1==0.1.9
-pycparser==2.17
-pycrypto==2.6.1
-pycurl==7.43.0
-pygal==2.3.1
-Pygments==2.1.3
-pygobject==3.20.0
-pyinotify==0.9.6
-PyOpenGL==3.1.0
+pandas==0.19.2
+protobuf==3.0.0
 pyparsing==2.1.10
-python-apt==1.1.0b1
-python-dateutil==2.5.3
-python-systemd==231
-pytz==2016.6.1
-PyYAML==3.12
-pyzmq==15.4.0
-repoze.lru==0.6
-requests==2.9.1
-Routes==2.3.1
-scikit-learn==0.17.1
-scipy==0.18.0
-simplegeneric==0.8.1
+python-dateutil==2.6.0
+pytz==2016.10
 six==1.10.0
-sklearn==0.0
-ssh-import-id==5.5
-statsmodels==0.6.1
-sympy==1.0
-terminado==0.6
-Theano==0.8.2
-tornado==4.4.1
-traitlets==4.2.2
-unattended-upgrades==0.1
-urllib3==1.13.1
-virtualenv==15.0.2
-wcwidth==0.1.7
-widgetsnbextension==1.2.6
+tensorflow==0.12.1
